# shadecore

./: Cargo.toml  README.md  build.rs
assets/: output.json  params.json  recording.json  recording.profiles.json  render.json
assets/shaders/: 01-kaleido.frag  02-plasmawarp.frag  03-tunnel.frag  04-voronoi.frag  old-voronoi.frag  present.frag
docs/: 404.md  _config.yml  index.md
docs/_docs/: 01-overview.md  02-features.md  03-how-it-works.md  04-output-routing.md  05-live-coding.md  06-ndi.md  07-midi.md
docs/_layouts/: default.html  doc.html
docs/_site/: 404.html  README.md  feed.xml  index.html
docs/_site/assets/css/: style.css
docs/_site/docs/01-overview/: index.html
docs/_site/docs/02-features/: index.html
docs/_site/docs/03-how-it-works/: index.html
docs/_site/docs/04-output-routing/: index.html
docs/_site/docs/05-ndi/: index.html
docs/_site/docs/06-midi/: index.html
docs/_site/docs/14-license/: index.html
midi/: shadecore-miditest.maxpat
native/spout_bridge/: CMakeLists.txt  spout_bridge.cpp  spout_bridge.h
src/: hotreload.rs  main.rs  recording.rs  watcher.rs.r
